--- a/tzs-xrpl-stablecoin/package.json
+++ b/tzs-xrpl-stablecoin/package.json
@@ -23,18 +23,18 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.5.0",
+    "axios": "^1.11.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^2.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.11.3",
     "winston": "^3.10.0",
-    "xrpl": "^2.13.0",
-    "cors": "^2.8.5",
-    "jsonwebtoken": "^9.0.2"
+    "xrpl": "^2.14.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
