--- a/tzs-xrpl-stablecoin/.env.example
+++ b/tzs-xrpl-stablecoin/.env.example
@@ -2,7 +2,11 @@
 PORT=3000
 NODE_ENV=development
 
-# Database Configuration
+# Database Configuration - Neon
+DATABASE_URL=postgresql://username:password@ep-example-123456.us-east-1.aws.neon.tech/neondb?sslmode=require
+TEST_DATABASE_URL=postgresql://username:password@ep-example-123456.us-east-1.aws.neon.tech/neondb_test?sslmode=require
+
+# Alternative: Individual database parameters (fallback if DATABASE_URL not set)
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=tzs_stablecoin
