feat: add Netlify deployment configuration
- Add netlify.toml with Next.js build settings
- Add .gitignore files for production deployment
- Update .env.example with production notes
- Configure automatic deployment from GitHub
- Project connected to nedalabs.netlify.app

--- a/tzs-xrpl-stablecoin/frontend/dashboard/.env.example
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/.env.example
@@ -6,7 +6,7 @@ NEXT_PUBLIC_ADMIN_ADDRESS=rM6G7xhcv4Tge7j1vKrbe8e2Zn3UX8ueMS
 NEXT_PUBLIC_TREASURY_ADDRESS=rNYBneQT2ddpA6SeyvfRSyx8VPLEYRVbzt
 NEXT_PUBLIC_CURRENCY_CODE=TZS
 
-# API Configuration  
+# API Configuration (for production, update to your backend URL)
 NEXT_PUBLIC_API_URL=http://localhost:3000/api
 
 # Optional Analytics
