feat: implement serverless wallet-based authentication system
- Add XRPL wallet creation and import functionality
- Implement wallet-based authentication with Neon database
- Create Netlify Functions for database operations (auth.ts, database.ts)
- Add AuthContext for state management
- Update dashboard to use direct database connections
- Remove dependency on separate backend deployment
- Add user registration flow with automatic wallet creation
- Implement role-based access control (admin/user)
- Update deployment configuration for serverless architecture

--- a/tzs-xrpl-stablecoin/frontend/dashboard/.env.example
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/.env.example
@@ -1,13 +1,13 @@
-# Dashboard Environment Variables
-NEXT_PUBLIC_API_URL=http://localhost:3000/
+# TZS Stablecoin Dashboard Environment Variables
+
+# Database Configuration (Direct Neon Connection)
+NEXT_PUBLIC_DATABASE_URL=postgresql://neondb_owner:npg_3EJCNTnzM9PF@ep-green-poetry-a26ov6e8-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
 # XRPL Configuration
 NEXT_PUBLIC_XRPL_NETWORK=wss://s.altnet.rippletest.net:51233
-NEXT_PUBLIC_ADMIN_ADDRESS=rM6G7xhcv4Tge7j1vKrbe8e2Zn3UX8ueMS
+NEXT_PUBLIC_ADMIN_ADDRESS=rfXQiN2AzW82XK6nMcU7DU1zsd4HpuQUoT
 NEXT_PUBLIC_TREASURY_ADDRESS=rNYBneQT2ddpA6SeyvfRSyx8VPLEYRVbzt
 NEXT_PUBLIC_CURRENCY_CODE=TZS
-
-# API Configuration (for production, update to your backend URL)
-NEXT_PUBLIC_API_URL=http://localhost:3000/api
 
 # Optional Analytics
 NEXT_PUBLIC_ENABLE_ANALYTICS=false
