--- a/tzs-xrpl-stablecoin/frontend/dashboard/package.json
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/package.json
@@ -5,24 +5,26 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@netlify/functions": "^4.2.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/pg": "^8.15.5",
     "axios": "^1.6.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.294.0",
     "next": "14.0.0",
+    "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^2.8.0",
     "socket.io-client": "^4.7.0",
     "tailwind-merge": "^2.6.0",
-    "xrpl": "^2.11.0",
+    "xrpl": "^2.14.3",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
