--- a/tzs-xrpl-stablecoin/frontend/dashboard/package.json
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "@netlify/functions": "^4.2.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.2.3",
