Fix Netlify routing for Next.js static export
- Simplified netlify.toml redirects for proper SPA routing
- Fixed API function routing to /.netlify/functions/api
- Removed conflicting redirect rules that caused 404 errors

--- a/tzs-xrpl-stablecoin/netlify.toml
+++ b/tzs-xrpl-stablecoin/netlify.toml
@@ -10,9 +10,10 @@
 
 [[redirects]]
   from = "/api/*"
-  to = "/.netlify/functions/:splat"
+  to = "/.netlify/functions/api/:splat"
   status = 200
 
+# Handle Next.js static export SPA routing
 [[redirects]]
   from = "/*"
   to = "/index.html"
