Update functions path for dashboard deployment
- Fix functions directory path to point to root netlify/functions
- Ensure functions are correctly deployed when building from dashboard directory

--- a/tzs-xrpl-stablecoin/frontend/dashboard/netlify.toml
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   publish = "out"
   command = "npm install && npm run build"
-  functions = "netlify/functions"
+  functions = "../../netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
