feat: Add ZenoPay integration and role-based dashboard
- Add ZenoPay mobile money integration for TZS deposits
- Implement role-based routing (admin vs user dashboards)
- Create deposit functionality with webhook handling
- Add user wallet interface with deposit panel
- Update sidebar navigation based on user role
- Add database schema for deposit tracking
- Environment variables updated for ZenoPay API
- Maintain single repo architecture with proper separation

--- a/tzs-xrpl-stablecoin/frontend/dashboard/.env.example
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/.env.example
@@ -1,13 +1,21 @@
 # TZS Stablecoin Dashboard Environment Variables
 
 # Database Configuration (Direct Neon Connection)
-NEXT_PUBLIC_DATABASE_URL=postgresql://neondb_owner:npg_3EJCNTnzM9PF@ep-green-poetry-a26ov6e8-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+DATABASE_URL=postgresql://neondb_owner:npg_3EJCNTnzM9PF@ep-green-poetry-a26ov6e8-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
-# XRPL Configuration
+# ZenoPay Mobile Money Integration
+ZENOPAY_API_KEY=your_zenopay_api_key_here
+ZENOPAY_WEBHOOK_URL=https://your-domain.netlify.app/.netlify/functions/zenopay-webhook
+
+# XRPL Configuration (for display purposes only - actual minting handled by separate wallet service)
 NEXT_PUBLIC_XRPL_NETWORK=wss://s.altnet.rippletest.net:51233
 NEXT_PUBLIC_ADMIN_ADDRESS=rfXQiN2AzW82XK6nMcU7DU1zsd4HpuQUoT
 NEXT_PUBLIC_TREASURY_ADDRESS=rNYBneQT2ddpA6SeyvfRSyx8VPLEYRVbzt
 NEXT_PUBLIC_CURRENCY_CODE=TZS
+
+# Wallet Service Integration (separate repository)
+WALLET_SERVICE_URL=https://your-wallet-service.com/api
+WALLET_SERVICE_API_KEY=your_wallet_service_api_key
 
 # Optional Analytics
 NEXT_PUBLIC_ENABLE_ANALYTICS=false
