--- a/tzs-xrpl-stablecoin/frontend/dashboard/netlify.toml
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/netlify.toml
@@ -8,12 +8,7 @@
   DATABASE_URL = "postgresql://neondb_owner:npg_3EJCNTnzM9PF@ep-green-poetry-a26ov6e8-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
   NEXT_PUBLIC_DATABASE_URL = "postgresql://neondb_owner:npg_3EJCNTnzM9PF@ep-green-poetry-a26ov6e8-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
-  status = 200
-
-# Handle Next.js static export SPA routing
+# SPA fallback for Next.js static export
 [[redirects]]
   from = "/*"
   to = "/index.html"
