--- a/tzs-xrpl-stablecoin/frontend/dashboard/netlify.toml
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  publish = "frontend/dashboard/out"
-  command = "cd frontend/dashboard && npm install && npm run build"
-  functions = "frontend/dashboard/netlify/functions"
+  publish = "out"
+  command = "npm install && npm run build"
+  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
