fix: Update netlify.toml for proper Next.js deployment

--- a/tzs-xrpl-stablecoin/frontend/dashboard/.env.example
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/.env.example
@@ -1,21 +1,21 @@
 # TZS Stablecoin Dashboard Environment Variables
 
-# Database Configuration (Direct Neon Connection)
-DATABASE_URL=postgresql://neondb_owner:npg_3EJCNTnzM9PF@ep-green-poetry-a26ov6e8-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+# Database Configuration (Server-side only - secure)
+DATABASE_URL=your_neon_database_connection_string_here
 
-# ZenoPay Mobile Money Integration
+# JWT Authentication (Server-side only - secure)
+JWT_SECRET=your_jwt_secret_key_here
+
+# ZenoPay Mobile Money Integration (Server-side only - secure)
 ZENOPAY_API_KEY=your_zenopay_api_key_here
 ZENOPAY_WEBHOOK_URL=https://your-domain.netlify.app/.netlify/functions/zenopay-webhook
 
-# XRPL Configuration (for display purposes only - actual minting handled by separate wallet service)
+# XRPL Configuration (Server-side only - secure)
+XRPL_NETWORK=wss://s.altnet.rippletest.net:51233
+XRPL_TREASURY_SEED=your_xrpl_treasury_seed_here
+XRPL_CURRENCY_CODE=TZS
+
+# Public Configuration (Client-side safe)
 NEXT_PUBLIC_XRPL_NETWORK=wss://s.altnet.rippletest.net:51233
-NEXT_PUBLIC_ADMIN_ADDRESS=rfXQiN2AzW82XK6nMcU7DU1zsd4HpuQUoT
-NEXT_PUBLIC_TREASURY_ADDRESS=rNYBneQT2ddpA6SeyvfRSyx8VPLEYRVbzt
 NEXT_PUBLIC_CURRENCY_CODE=TZS
-
-# Wallet Service Integration (separate repository)
-WALLET_SERVICE_URL=https://your-wallet-service.com/api
-WALLET_SERVICE_API_KEY=your_wallet_service_api_key
-
-# Optional Analytics
 NEXT_PUBLIC_ENABLE_ANALYTICS=false
