--- a/tzs-xrpl-stablecoin/frontend/dashboard/netlify.toml
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/netlify.toml
@@ -1,15 +1,7 @@
 [build]
-  publish = "out"
+  publish = ".next"
   command = "npm install && npm run build"
   functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
-  DATABASE_URL = "postgresql://neondb_owner:npg_3EJCNTnzM9PF@ep-green-poetry-a26ov6e8-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-  NEXT_PUBLIC_DATABASE_URL = "postgresql://neondb_owner:npg_3EJCNTnzM9PF@ep-green-poetry-a26ov6e8-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
-
-# SPA fallback for Next.js static export
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
