--- a/tzs-xrpl-stablecoin/netlify.toml
+++ b/tzs-xrpl-stablecoin/netlify.toml
@@ -1,13 +1,20 @@
 [build]
   base = "frontend/dashboard"
   publish = "out"
-  command = "npm run build"
+  command = "npm install && npm run build"
   functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "18"
+  NPM_FLAGS = "--production=false"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
