Restore blockchain activities tab with dark theme and XRPL explorer links

--- a/tzs-xrpl-stablecoin/frontend/dashboard/.env.example
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/.env.example
@@ -8,7 +8,7 @@ JWT_SECRET=your_jwt_secret_key_here
 
 # ZenoPay Mobile Money Integration (Server-side only - secure)
 ZENOPAY_API_KEY=your_zenopay_api_key_here
-ZENOPAY_WEBHOOK_URL=https://your-domain.netlify.app/.netlify/functions/zenopay-webhook
+ZENOPAY_WEBHOOK_URL=https://www.tumabure.xyz/.netlify/functions/zenopay-webhook
 
 # XRPL Configuration (Server-side only - secure)
 XRPL_NETWORK=wss://s.altnet.rippletest.net:51233
