--- a/tzs-xrpl-stablecoin/frontend/dashboard/package.json
+++ b/tzs-xrpl-stablecoin/frontend/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xrpl-stablecoin-dashboard",
+  "name": "tumabure-dashboard",
   "version": "0.1.0",
   "private": true,
   "scripts": {
